tests/interpreter/or-expression-bad-types.stderr
error: expected 'Bool', got 'Number'
 --> $DIR/or-expression-bad-types.lox:1:1
  |
1 | 1 or 2;
  | ^
